--- a/src/main/yaml/simulation.yml
+++ b/src/main/yaml/simulation.yml
@@ -1,27 +1,38 @@
-incarnation: protelis
+incarnation: scafi
 
 network-model:
   type: ConnectWithinDistance
   parameters: [0.5]
 
-_gradient: &gradient
+_gradient: &program
   - time-distribution: 1
-    # Writing Protelis programs within a YAML file is a bad experience
-    # (some characters need escaping, no syntax highlight, no code suggestions...)
-    # We recommend using the Protelis Eclipse plugin to write your code, then
-    # Loading the code as a module within Alchemist
-    # In order to run this example, make sure that src/main/protelis is part of
-    # your classpath (the Gradle script is already properly configured).
-    program: org:protelis:tutorial:distanceTo
+    type: Event
+    actions:
+    - type: RunScafiProgram
+      parameters: [ it.casestudy.BaseProgram ]
   - program: send
+
+layers:
+  - type: BidimensionalGaussianLayer
+    parameters: [ 0.5, -3, 2.0, 1.0 ]
+    molecule: temperature-1
+
+  - type: BidimensionalGaussianLayer
+    parameters: [ 0.0, 0.0, 2.0, 1.0 ]
+    molecule: temperature-2
+
+  - type: BidimensionalGaussianLayer
+    parameters: [ 1.0, 4.0, 2.0, 1.0 ]
+    molecule: temperature-3
+
+  - type: BidimensionalGaussianLayer
+    parameters: [ -3.0, 2.0, 2.0, 1.0 ]
+    molecule: temperature-4
+
+  - type: LayerAggregator
+    molecule: temperature
 
 deployments:
   type: Grid
   parameters: [-5, -5, 5, 5, 0.25, 0.25, 0.1, 0.1]
-  contents:
-    - in:
-        type: Rectangle
-        parameters: [-6, -6, 2, 2]
-      molecule: source
-      concentration: true
-  programs: *gradient
+  programs: *program
