--- a/src/main/yaml/simulation.yml
+++ b/src/main/yaml/simulation.yml
@@ -13,21 +13,29 @@ _gradient: &program
   - program: send
 
 layers:
+  - type: UniformLayer
+    parameters: [ 20.0 ]
+    molecule: base-temperature
+
   - type: BidimensionalGaussianLayer
-    parameters: [ 0.5, -3, 2.0, 1.0 ]
+    parameters: [ 3, -4, -2.0, 1.0 ]
     molecule: temperature-1
 
   - type: BidimensionalGaussianLayer
-    parameters: [ 0.0, 0.0, 2.0, 1.0 ]
+    parameters: [ 0.0, 0.0, -2.0, 1.0 ]
     molecule: temperature-2
 
   - type: BidimensionalGaussianLayer
-    parameters: [ 1.0, 4.0, 2.0, 1.0 ]
+    parameters: [ 0.0, 2.0, 3.5, -4.0, 2.0, 2.0, 1.0 ]
     molecule: temperature-3
 
   - type: BidimensionalGaussianLayer
-    parameters: [ -3.0, 2.0, 2.0, 1.0 ]
+    parameters: [ -3.0, 2.0, -2.0, 1.0 ]
     molecule: temperature-4
+
+  - type: BidimensionalGaussianLayer
+    parameters: [ -3, -3, -2.0, 1.5 ]
+    molecule: temperature-5
 
   - type: LayerAggregator
     molecule: temperature
