add candidate selection

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,7 @@
 version=3.2.1
-align.openParenCallSite = true
-align.openParenDefnSite = true
+project.git = true
+preset = default
+align.preset = none
 maxColumn = 120
 continuationIndent.defnSite = 2
 assumeStandardLibraryStripMargin = true
