--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,17 @@
 [versions]
-alchemist = "11.3.1"
+alchemist = "12.0.2"
 kotlin = "1.6.0"
 scala = "2.13.4"
 
 [libraries]
 alchemist = { module = "it.unibo.alchemist:alchemist", version.ref = "alchemist" }
 alchemist-scafi = { module = "it.unibo.alchemist:alchemist-incarnation-scafi", version.ref = "alchemist" }
+alchemist-interfaces = { module = "it.unibo.alchemist:alchemist-interfaces", version.ref = "alchemist" }
+alchemist-tooling = { module = "it.unibo.alchemist:alchemist-ui-tooling", version.ref = "alchemist" }
 scala-compiler = { module = "org.scala-lang:scala-library", version.ref = "scala"}
 
 [bundles]
-alchemist-bundle = [ "alchemist", "alchemist-scafi", "scala-compiler" ]
+alchemist-bundle = [ "alchemist", "alchemist-scafi", "scala-compiler", "alchemist-interfaces", "alchemist-tooling" ]
 
 [plugins]
 gitSemVer = { id = "org.danilopianini.git-sensitive-semantic-versioning", version = "0.3.0" }
