--- a/src/main/yaml/oneDirectionField.yml
+++ b/src/main/yaml/oneDirectionField.yml
@@ -1,5 +1,12 @@
 incarnation: scafi
 
+variables:
+  seed: &seed { min: 0.0, max: 10.0, step: 1.0, default: 0.0 }
+  simulation_length: &simulation_length { formula: 100.0 }
+seeds: { scenario: *seed, simulation: *seed }
+
+terminate: { type: AfterTime, parameters: [*simulation_length] }
+
 network-model:
   type: ConnectWithinDistance
   parameters: [0.75]
