remove effect files (using a fallback), add 'watch dog' concept, add an hysteresis condition to became a candidate

--- a/src/main/yaml/overlayPatterns.yml
+++ b/src/main/yaml/overlayPatterns.yml
@@ -54,7 +54,7 @@ deployments:
 
 export:
   - type: it.unibo.alchemist.loader.export.exporters.CSVExporter
-    parameters: ["exporter", 1.0, "./data"]
+    parameters: ["overlayPatterns", 1.0, "./data"]
     data:
       - type: Time
       - type: ClusterCount
