--- a/src/main/yaml/nonConvexLayers.yml
+++ b/src/main/yaml/nonConvexLayers.yml
@@ -33,3 +33,10 @@ deployments:
   type: Grid
   parameters: [-5, -5, 5, 5, 0.5, 0.5, 0.25, 0.25]
   programs: *program
+
+export:
+  - type: CSVExporter
+    parameters: ["nonConvexLayers", 1.0, "./data"]
+    data:
+      - type: Time
+      - type: ClusterCount
