--- a/src/main/yaml/oneDirectionFieldLocalMinimum.yml
+++ b/src/main/yaml/oneDirectionFieldLocalMinimum.yml
@@ -30,3 +30,10 @@ deployments:
   type: Grid
   parameters: [-5, -5, 5, 5, 0.5, 0.5, 0.25, 0.25]
   programs: *program
+
+export:
+  - type: CSVExporter
+    parameters: ["oneDirectionFieldLocalMinimum", 1.0, "./data"]
+    data:
+      - type: Time
+      - type: ClusterCount
