feat: add merge strategy, add watchdog strategy (how to kill clusters, add cluster information, add comment in cluster lib (overlapCluster to reimplement)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 alchemist = "12.0.2"
 kotlin = "1.6.0"
 scala = "2.13.4"
+breeze = "2.0"
 
 [libraries]
 alchemist = { module = "it.unibo.alchemist:alchemist", version.ref = "alchemist" }
@@ -9,9 +10,10 @@ alchemist-scafi = { module = "it.unibo.alchemist:alchemist-incarnation-scafi", v
 alchemist-interfaces = { module = "it.unibo.alchemist:alchemist-interfaces", version.ref = "alchemist" }
 alchemist-tooling = { module = "it.unibo.alchemist:alchemist-ui-tooling", version.ref = "alchemist" }
 scala-compiler = { module = "org.scala-lang:scala-library", version.ref = "scala"}
+breeze-math = { module = "org.scalanlp:breeze_2.13", version.ref = "breeze" }
 
 [bundles]
-alchemist-bundle = [ "alchemist", "alchemist-scafi", "scala-compiler", "alchemist-interfaces", "alchemist-tooling" ]
+alchemist-bundle = [ "alchemist", "alchemist-scafi", "scala-compiler", "alchemist-interfaces", "alchemist-tooling", "breeze-math" ]
 
 [plugins]
 gitSemVer = { id = "org.danilopianini.git-sensitive-semantic-versioning", version = "0.3.0" }
