--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-alchemist = "12.0.2"
+alchemist = "12.1.2"
 kotlin = "1.6.0"
 scala = "2.13.4"
 breeze = "2.0"
@@ -14,7 +14,7 @@ scala-compiler = { module = "org.scala-lang:scala-library", version.ref = "scala
 breeze-math = { module = "org.scalanlp:breeze_2.13", version.ref = "breeze" }
 
 [bundles]
-alchemist-bundle = [ "alchemist", "alchemist-scafi", "scala-compiler", "alchemist-interfaces", "alchemist-tooling", "breeze-math" ]
+alchemist-bundle = [ "alchemist", "alchemist-scafi", "scala-compiler", "alchemist-interfaces", "alchemist-tooling", "alchemist-swing", "breeze-math" ]
 
 
 [plugins]
