--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ alchemist = "12.1.2"
 kotlin = "1.6.0"
 scala = "2.13.4"
 breeze = "2.0"
+scalacache = "0.28.0"
 
 [libraries]
 alchemist = { module = "it.unibo.alchemist:alchemist", version.ref = "alchemist" }
@@ -12,10 +13,11 @@ alchemist-tooling = { module = "it.unibo.alchemist:alchemist-ui-tooling", versio
 alchemist-swing = { module = "it.unibo.alchemist:alchemist-swingui", version.ref = "alchemist"}
 scala-compiler = { module = "org.scala-lang:scala-library", version.ref = "scala"}
 breeze-math = { module = "org.scalanlp:breeze_2.13", version.ref = "breeze" }
+scala-cache = { module = "com.github.cb372:scalacache-guava_2.13", version.ref = "scalacache"}
 
 [bundles]
-alchemist-bundle = [ "alchemist", "alchemist-scafi", "scala-compiler", "alchemist-interfaces", "alchemist-tooling", "alchemist-swing", "breeze-math" ]
-
+alchemist-bundle = [ "alchemist", "alchemist-scafi", "alchemist-interfaces", "alchemist-tooling", "alchemist-swing"]
+utils-bundle = [ "scala-cache", "scala-compiler", "breeze-math" ]
 
 [plugins]
 gitSemVer = { id = "org.danilopianini.git-sensitive-semantic-versioning", version = "0.3.0" }
