--- a/src/main/yaml/stretchedOutPatterns.yml
+++ b/src/main/yaml/stretchedOutPatterns.yml
@@ -5,13 +5,13 @@ variables:
   simulation_length: &simulation_length { formula: 100.0 }
   in_cluster_thr: &in_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 1.0, [ 0.5, 0.75, 1.1 ] ]
+    parameters: [ 1.0, [ 0.5 ] ]
   same_cluster_thr: &same_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 0.1, [ 0.05, 0.5, 1.5 ] ]
+    parameters: [ 0.1, [ 0.5 ] ]
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
-    parameters: [ 3, [ 0, 5, 10 ] ]
+    parameters: [ 3, [ 5 ] ]
 
 seeds: { scenario: *seed, simulation: *seed }
 
