--- a/src/main/yaml/standardPatterns.yml
+++ b/src/main/yaml/standardPatterns.yml
@@ -75,3 +75,5 @@ export:
     data:
       - type: Time
       - type: ClusterCount
+      - type: ClusterEvaluation
+        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4" ]
