chore: add metrics to evaluate (disjoined) clusters

--- a/src/main/yaml/standardPatternsMovement.yml
+++ b/src/main/yaml/standardPatternsMovement.yml
@@ -84,3 +84,5 @@ export:
         parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4" ]
       - type: ClusterMisclassifications
         parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4" ]
+      - type: ClusterMetrics
+        filters:
