--- a/src/main/yaml/standardPatterns.yml
+++ b/src/main/yaml/standardPatterns.yml
@@ -77,3 +77,4 @@ export:
       - type: ClusterCount
       - type: ClusterEvaluation
         parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4" ]
+      - type: ClusterMetrics
