--- a/src/main/yaml/nonConvexLayers.yml
+++ b/src/main/yaml/nonConvexLayers.yml
@@ -34,7 +34,7 @@ layers:
     parameters: [ 20.0 ]
     molecule: base-temperature
   - type: NonConvexLayer
-    parameters: [ -5.0, 0, 0, 5, 5, 5, 0, 0, 5, 0, 0]
+    parameters: [ -5.0, 0, 0, 2, 1, 3, 1, 5, 0, 5, 5, 3, 4, 2, 4, 0, 5, 0, 0]
     molecule: temperature-1
   - type: LayerAggregator
     molecule: temperature
