--- a/src/main/yaml/oneDirectionField.yml
+++ b/src/main/yaml/oneDirectionField.yml
@@ -54,3 +54,8 @@ export:
     data:
       - type: Time
       - type: ClusterCount
+      - type: ClusterEvaluation
+        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+      - type: ClusterMisclassifications
+        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+      - type: ClusterMetrics
