--- a/plots/metrics.yml
+++ b/plots/metrics.yml
@@ -6,16 +6,17 @@ the_plots_labels:
   - 'cluster-2'
   - 'cluster-3'
   - 'cluster-4'
+  - 'cluster-5'
   - 'errors'
   - 'silhouette'
   - 'dunn index'
 the_plots_formats:
-  - [0,8,9]
+  - [0,9,10]
 #y_labels: ['# of requests', '# of requests','','% of utilization of workers']
 #file_suffixes:
 #  - errors
 line_widths:
-  - [2,2,2,2,2,2,2,2,2,2,2]
+  - [2,2,2,2,2,2,2,2,2,2,2,2,2]
 default_colors: &default_colors ["black", "cyan", "blue","red","green",
                                  "cyan", "blue","red",
                                  "magenta", "brown", "orange", "green", "brown"]
@@ -40,10 +41,8 @@ sampling:
 samplingField:
   - seed
 
-hlines:
-  0: [[1, { linestyle: '--' }], [-1, { linestyle: '--' }]]
 title_prefix: ''
 excluded_titles:
 line_styles:
-  - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
+  - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
 format: "png"
