--- a/src/main/yaml/standardPatterns.yml
+++ b/src/main/yaml/standardPatterns.yml
@@ -76,5 +76,7 @@ export:
       - type: Time
       - type: ClusterCount
       - type: ClusterEvaluation
-        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4" ]
+        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+      - type: ClusterMisclassifications
+        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
       - type: ClusterMetrics
