--- a/src/main/yaml/nonConvexLayers.yml
+++ b/src/main/yaml/nonConvexLayers.yml
@@ -51,8 +51,6 @@ deployments:
     - molecule: waitingTime
       concentration: *candidate_in_hysteresis
 
-
-
 export:
   - type: CSVExporter
     parameters: ["nonConvexLayers", 1.0, "./data"]
@@ -60,7 +58,7 @@ export:
       - type: Time
       - type: ClusterCount
       - type: ClusterEvaluation
-        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+        parameters: [ 1, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
       - type: ClusterMisclassifications
-        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+        parameters: [ 0.01 ]
       - type: ClusterMetrics
