--- a/src/main/yaml/oneDirectionFieldLocalMinimum.yml
+++ b/src/main/yaml/oneDirectionFieldLocalMinimum.yml
@@ -55,7 +55,7 @@ export:
       - type: Time
       - type: ClusterCount
       - type: ClusterEvaluation
-        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+        parameters: [ 1, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
       - type: ClusterMisclassifications
-        parameters: [ 0.05, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+        parameters: [ 0.01 ]
       - type: ClusterMetrics
