--- a/src/main/yaml/standardPatternsMovement.yml
+++ b/src/main/yaml/standardPatternsMovement.yml
@@ -1,17 +1,20 @@
 incarnation: scafi
 
 variables:
-  seed: &seed { min: 0.0, max: 10.0, step: 1.0, default: 0.0 }
+  seed: &seed { min: 0.0, max: 20.0, step: 1.0, default: 0.0 }
   simulation_length: &simulation_length { formula: 100.0 }
+  density: &density
+    type: ArbitraryVariable
+    parameters: [ 0.5, [ 0.25, 0.75 ] ]
   in_cluster_thr: &in_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 1.0, [ 0.5 ] ]
+    parameters: [ 1.0, [ 0.5, 1.5 ] ]
   same_cluster_thr: &same_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 0.1, [ 0.5 ] ]
+    parameters: [ 0.1, [ 0.5, 1 ] ]
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
-    parameters: [ 3, [ 5 ] ]
+    parameters: [ 3, [ 5, 7, 1 ] ]
   speed: &speed
     type: ArbitraryVariable
     parameters: [ 0.01, [ 0.02, 0.03 ] ]
@@ -60,7 +63,7 @@ layers:
 
 deployments:
   type: Grid
-  parameters: [-5, -5, 5, 5, 0.5, 0.5, 0.25, 0.25]
+  parameters: [-5, -5, 5, 5, *density, *density, 0.25, 0.25]
   programs:
     - *program
     - time-distribution: 10
