--- a/src/main/yaml/oneDirectionField.yml
+++ b/src/main/yaml/oneDirectionField.yml
@@ -5,20 +5,23 @@ variables:
   simulation_length: &simulation_length { formula: 150.0 }
   density: &density
     type: ArbitraryVariable
-    parameters: [ 0.5, [ 0.25, 0.75 ] ]
+    parameters: [ 0.5, [ 0.25, 0.5,0.75 ] ]
   grid_delta: &grid_delta
     formula: 0.25
   neighbourhood_radius: &neighbourhood_radius
     formula: 'grid_delta + density'
   in_cluster_thr: &in_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 1.0, [ 0.5, 1.5 ] ]
+    parameters: [ 1.0, [ 0.5, 1.0, 1.5 ] ]
   same_cluster_thr: &same_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 0.1, [ 0.5, 1 ] ]
+    parameters: [ 0.1, [ 0.1, 0.5, 1.0 ] ]
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
-    parameters: [ 3, [ 5, 7, 1 ] ]
+    parameters: [ 3, [ 1, 3, 5, 7, 1 ] ]
+  speed: &speed
+    type: ArbitraryVariable
+    parameters: [ 0.0, [ 0.0 ] ]
 
 seeds: { scenario: *seed, simulation: *seed }
 
