--- a/src/main/yaml/standardPatternsMovement.yml
+++ b/src/main/yaml/standardPatternsMovement.yml
@@ -5,16 +5,16 @@ variables:
   simulation_length: &simulation_length { formula: 100.0 }
   density: &density
     type: ArbitraryVariable
-    parameters: [ 0.5, [ 0.25, 0.75 ] ]
+    parameters: [ 0.5, [ 0.25, 0.5,0.75 ] ]
   in_cluster_thr: &in_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 1.0, [ 0.5, 1.5 ] ]
+    parameters: [ 1.0, [ 0.5, 1.0, 1.5 ] ]
   same_cluster_thr: &same_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 0.1, [ 0.5, 1 ] ]
+    parameters: [ 0.1, [ 0.1, 0.5, 1.0 ] ]
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
-    parameters: [ 3, [ 5, 7, 1 ] ]
+    parameters: [ 3, [ 1, 3, 5, 7, 1 ] ]
   speed: &speed
     type: ArbitraryVariable
     parameters: [ 0.01, [ 0.02, 0.03 ] ]
