--- a/src/main/yaml/oneDirectionFieldLocalMinimum.yml
+++ b/src/main/yaml/oneDirectionFieldLocalMinimum.yml
@@ -1,7 +1,7 @@
 incarnation: scafi
 
 variables:
-  seed: &seed { min: 0.0, max: 20.0, step: 1.0, default: 0.0 }
+  seed: &seed { min: 0.0, max: 10.0, step: 1.0, default: 0.0 }
   simulation_length: &simulation_length { formula: 100.0 }
   density: &density
     type: ArbitraryVariable
@@ -18,7 +18,7 @@ variables:
     parameters: [ 0.1, [ 0.1, 0.5, 1.0 ] ]
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
-    parameters: [ 3, [ 1, 3, 5, 7, 1 ] ]
+    parameters: [ 3, [ 1, 3, 7 ] ]
   speed: &speed
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
