--- a/src/main/yaml/standardPatternsMovement.yml
+++ b/src/main/yaml/standardPatternsMovement.yml
@@ -5,7 +5,7 @@ variables:
   simulation_length: &simulation_length { formula: 100.0 }
   density: &density
     type: ArbitraryVariable
-    parameters: [ 0.5, [ 0.5, 0.75 ] ]
+    parameters: [ 0.5, [ 0.5 ] ]
   in_cluster_thr: &in_cluster_thr
     type: ArbitraryVariable
     parameters: [ 1.0, [ 0.5, 1.0, 1.5 ] ]
@@ -17,7 +17,7 @@ variables:
     parameters: [ 3, [ 1, 3, 7 ] ]
   speed: &speed
     type: ArbitraryVariable
-    parameters: [ 0.01, [ 0.02, 0.03 ] ]
+    parameters: [ 0.01, [ 0.01, 0.02, 0.03 ] ]
 
 
 _zero: &zero "it.unibo.scafi.space.Point2D(0,0)"
