--- a/src/main/yaml/overlayPatterns.yml
+++ b/src/main/yaml/overlayPatterns.yml
@@ -35,7 +35,7 @@ _gradient: &program
     type: Event
     actions:
     - type: RunScafiProgram
-      parameters: [ it.casestudy.ClusteringV2]
+      parameters: [ it.casestudy.Clustering]
   - program: send
 
 layers:
