--- a/src/main/yaml/standardPatternsMovement.yml
+++ b/src/main/yaml/standardPatternsMovement.yml
@@ -34,7 +34,7 @@ _gradient: &program
     type: Event
     actions:
     - type: RunScafiProgram
-      parameters: [ it.casestudy.ClusteringV2]
+      parameters: [ it.casestudy.Clustering]
   - program: send
 
 layers:
