chore: update candidate condition, add fix speed and range to create 'realistic' simulation

--- a/plots/cluster-node-count.yml
+++ b/plots/cluster-node-count.yml
@@ -43,4 +43,4 @@ title_prefix: ''
 excluded_titles:
 line_styles:
   - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
-format: "png"
+format: "pdf"
