--- a/plots/errors.yml
+++ b/plots/errors.yml
@@ -44,4 +44,4 @@ title_prefix: ''
 excluded_titles:
 line_styles:
   - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
-format: "png"
+format: "pdf"
