--- a/plots/metrics.yml
+++ b/plots/metrics.yml
@@ -45,4 +45,4 @@ title_prefix: ''
 excluded_titles:
 line_styles:
   - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
-format: "png"
+format: "pdf"
