--- a/plots/errors.yml
+++ b/plots/errors.yml
@@ -24,14 +24,15 @@ legend_position:
   - "upper right"
   - "upper right"
 legend_size: 12
-force_limit_plot_y:
 #  1: 140
 #   3: 1000
 #  4: 35
 #  0: 40
 #  3: 80
-start_plot_x:
-  0: 90
+start_plot_y:
+  - 0
+force_limit_plot_y:
+  - 1.1
 force_limit_plot_x:
 #  0: 820
 #  1: 800
