--- a/src/main/yaml/oneDirectionFieldLocalMinimum.yml
+++ b/src/main/yaml/oneDirectionFieldLocalMinimum.yml
@@ -1,7 +1,7 @@
 incarnation: scafi
 
 variables:
-  seed: &seed { min: 0.0, max: 10.0, step: 1.0, default: 0.0 }
+  seed: &seed { min: 0.0, max: 20.0, step: 1.0, default: 0.0 }
   simulation_length: &simulation_length { formula: 100.0 }
   density: &density
     type: ArbitraryVariable
@@ -64,8 +64,8 @@ export:
     data:
       - type: Time
       - type: ClusterCount
-      - type: ClusterEvaluation
-        parameters: [ 1, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+      - type: SimpleNodePerClusterCount
+        parameters: [ ]
       - type: ClusterMisclassifications
         parameters: [ 0.01 ]
       - type: ClusterMetrics
