--- a/src/main/yaml/nonConvexLayers.yml
+++ b/src/main/yaml/nonConvexLayers.yml
@@ -12,13 +12,13 @@ variables:
     formula: 'grid_delta + density'
   in_cluster_thr: &in_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 1.0, [ 0.5, 1.0, 1.5 ] ]
+    parameters: [ 1.0, [ 1.0 ] ]
   same_cluster_thr: &same_cluster_thr
     type: ArbitraryVariable
     parameters: [ 0.3, [ 0.1, 0.3, 0.7 ] ]
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
-    parameters: [ 3, [ 3, 5, 7 ] ]
+    parameters: [ 3, [ 3 ] ]
   speed: &speed
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
