--- a/src/main/yaml/overlayPatterns.yml
+++ b/src/main/yaml/overlayPatterns.yml
@@ -1,15 +1,11 @@
 incarnation: scafi
 
 variables:
-  seed: &seed { min: 0.0, max: 20.0, step: 1.0, default: 0.0 }
+  seed: &seed { min: 0.0, max: 10.0, step: 1.0, default: 0.0 }
   simulation_length: &simulation_length { formula: 150.0 }
   density: &density
     type: ArbitraryVariable
     parameters: [ 0.5, [ 0.5, 0.75 ] ]
-  grid_delta: &grid_delta
-    formula: 0.25
-  neighbourhood_radius: &neighbourhood_radius
-    formula: 0.75
   in_cluster_thr: &in_cluster_thr
     type: ArbitraryVariable
     parameters: [ 1.0, [ 0.5, 1.0, 1.5 ] ]
@@ -22,13 +18,16 @@ variables:
   speed: &speed
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
+  explore_area: &explore_area
+    type: ArbitraryVariable
+    parameters: [ 0.0, [ 0.0 ] ]
 seeds: { scenario: *seed, simulation: *seed }
 
 terminate: { type: AfterTime, parameters: [*simulation_length] }
 
 network-model:
   type: ConnectWithinDistance
-  parameters: [*neighbourhood_radius]
+  parameters: [ 1 ]
 
 _gradient: &program
   - time-distribution: 1
