--- a/src/main/yaml/standardPatternsMovement.yml
+++ b/src/main/yaml/standardPatternsMovement.yml
@@ -1,14 +1,14 @@
 incarnation: scafi
 
 variables:
-  seed: &seed { min: 0.0, max: 20.0, step: 1.0, default: 0.0 }
+  seed: &seed { min: 0.0, max: 10.0, step: 1.0, default: 0.0 }
   simulation_length: &simulation_length { formula: 100.0 }
   density: &density
     type: ArbitraryVariable
     parameters: [ 0.5, [ 0.5 ] ]
   in_cluster_thr: &in_cluster_thr
     type: ArbitraryVariable
-    parameters: [ 1.0, [ 0.5, 1.0, 1.5 ] ]
+    parameters: [ 1.5, [ 0.5, 1.0, 1.5 ] ]
   same_cluster_thr: &same_cluster_thr
     type: ArbitraryVariable
     parameters: [ 0.3, [ 0.1, 0.3, 0.7 ] ]
@@ -17,10 +17,13 @@ variables:
     parameters: [ 3, [ 3, 5, 7 ] ]
   speed: &speed
     type: ArbitraryVariable
-    parameters: [ 0.01, [ 0.005, 0.01, 0.015 ] ]
+    parameters: [ 0.02, [ 0.02, 0.03, 0.04 ] ]
+  explore_area: &explore_area
+    type: ArbitraryVariable
+    parameters: [ 0.5, [ 0.5, 0.6 ] ]
 
 
-_zero: &zero "it.unibo.scafi.space.Point2D(0,0)"
+_zero: &zero "null"
 seeds: { scenario: *seed, simulation: *seed }
 
 terminate: { type: AfterTime, parameters: [*simulation_length] }
@@ -43,11 +46,11 @@ layers:
     molecule: base-temperature
 
   - type: BidimensionalGaussianLayer
-    parameters: [ 3, -2, -2.0, 1.0 ]
+    parameters: [ 2.5, -1.5, -2.0, 1.0 ]
     molecule: temperature-1
 
   - type: BidimensionalGaussianLayer
-    parameters: [ 2.0, 3.5, -2.0, 1.0 ]
+    parameters: [ 1.5, 3.0, -2.0, 1.0 ]
     molecule: temperature-2
 
   - type: BidimensionalGaussianLayer
@@ -55,7 +58,7 @@ layers:
     molecule: temperature-3
 
   - type: BidimensionalGaussianLayer
-    parameters: [ -3, -3, -2.0, 1.0 ]
+    parameters: [ -2.5, -2.5, -2.0, 1.0 ]
     molecule: temperature-4
 
   - type: LayerAggregator
@@ -80,7 +83,8 @@ deployments:
       concentration: true
     - molecule: target
       concentration: *zero
-
+    - molecule: exploreArea
+      concentration: *explore_area
 export:
   - type: CSVExporter
     parameters: ["standardPatternsMovement", 1.0, "./data"]
@@ -88,7 +92,7 @@ export:
       - type: Time
       - type: ClusterCount
       - type: ClusterEvaluation
-        parameters: [ 0.15, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+        parameters: [ *in_cluster_thr, "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
       - type: ClusterMisclassifications
-        parameters: [ 0.15 , "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
+        parameters: [ *in_cluster_thr , "temperature-1", "temperature-2", "temperature-3", "temperature-4", "temperature-5" ]
       - type: ClusterMetrics
