--- a/plots/errors-movement.yml
+++ b/plots/errors-movement.yml
@@ -8,21 +8,18 @@ the_plots_labels:
   - 'cluster-4'
   - 'cluster-5'
   - 'errors'
-  - 'silhouette'
-  - 'dunn index'
 the_plots_formats:
-  - [0,9,10]
+  - [0,8]
 #y_labels: ['# of requests', '# of requests','','% of utilization of workers']
 #file_suffixes:
 #  - errors
 line_widths:
-  - [2,2,2,2,2,2,2,2,2,2,2,2,2]
+  - [2,2,2,2,2,2,2,2,2,2,2]
 default_colors: &default_colors ["black", "cyan", "blue","red","green",
                                  "cyan", "blue","red",
                                  "magenta", "brown", "orange", "green", "brown"]
-
 y_labels:
-  - 'index value'
+  - 'error rate'
 
 the_plots_colors:
   - *default_colors
@@ -30,12 +27,15 @@ legend_position:
   - "upper right"
   - "upper right"
 legend_size: 12
-start_plot_x:
-  0: 90
+#  1: 140
+#   3: 1000
+#  4: 35
+#  0: 40
+#  3: 80
 start_plot_y:
-  - -2
+  - 0
 force_limit_plot_y:
-  - 4
+  - 1.1
 force_limit_plot_x:
 #  0: 820
 #  1: 800
@@ -44,10 +44,9 @@ sampling:
   - true
 samplingField:
   - seed
-
-title_prefix: 'Internal metrics'
+title_prefix: 'errors '
 excluded_titles:
-  - [4, 5]
+  - []
 line_styles:
-  - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
+  - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
 format: "pdf"
