--- a/plots/cluster-node-count-five.yml
+++ b/plots/cluster-node-count-five.yml
@@ -8,14 +8,14 @@ the_plots_labels:
   - 'cluster-4'
   - 'cluster-5'
 the_plots_formats:
-  - [0,3,4,5,6]
+  - [0,3,4,5,6,7]
 #y_labels: ['# of requests', '# of requests','','% of utilization of workers']
 #file_suffixes:
 #  - errors
 line_widths:
   - [2,2,2,2,2,2,2,2,2,2,2]
 default_colors: &default_colors ["black", "cyan", "blue","red","green",
-                                 "cyan", "blue","red",
+                                 "cyan", "blue","orange",
                                  "magenta", "brown", "orange", "green", "brown"]
 y_labels:
   - '# of nodes'
@@ -42,8 +42,9 @@ sampling:
   - true
 samplingField:
   - seed
-title_prefix: ''
+title_prefix: ' '
 excluded_titles:
+  - [4, 5]
 line_styles:
   - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
 format: "pdf"
