--- a/src/main/yaml/overlayPatterns.yml
+++ b/src/main/yaml/overlayPatterns.yml
@@ -40,7 +40,7 @@ _gradient: &program
   - program: send
 
 layers:
-  - type: UniformLayer
+  - type: ConstantLayer
     parameters: [ 20.0 ]
     molecule: base-temperature
 
