--- a/src/main/yaml/failScenario.yml
+++ b/src/main/yaml/failScenario.yml
@@ -3,12 +3,6 @@ incarnation: scafi
 variables:
   seed: &seed { min: 0.0, max: 20.0, step: 1.0, default: 0.0 }
   simulation_length: &simulation_length { formula: 100.0 }
-  fail_frequency: &fail_frequency
-    type: ArbitraryVariable
-    parameters: [ 0.1, [0.001, 0.1, 0.5] ]
-  new_node_frequency: &new_node_frequency
-    type: ArbitraryVariable
-    parameters: [ 0.1, [0.001, 0.1, 0.5] ]
   density: &density
     type: ArbitraryVariable
     parameters: [ 0.5, [ 0.5, 0.75 ] ]
@@ -23,6 +17,13 @@ variables:
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
     parameters: [ 3, [ 3, 5, 7 ] ]
+  fail_frequency: &fail_frequency
+    type: ArbitraryVariable
+    parameters: [ 0.1, [ 0.001, 0.1, 0.5 ] ]
+  new_node_frequency: &new_node_frequency
+    type: ArbitraryVariable
+    parameters: [ 0.1, [ 0.001, 0.1, 0.5 ] ]
+  ##### UNUSED => used only for configuring multiple simulations
   speed: &speed
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
@@ -30,10 +31,10 @@ variables:
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
 
-
 _constants:
   connection_range: &connection_range 1
   delta_shift: &delta_shift 0.05
+
 seeds: { scenario: *seed, simulation: *seed }
 
 terminate: { type: AfterTime, parameters: [*simulation_length] }
