--- a/src/main/yaml/failScenarioAndUpdatable.yml
+++ b/src/main/yaml/failScenarioAndUpdatable.yml
@@ -17,6 +17,12 @@ variables:
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
     parameters: [ 3, [ 3, 5, 7 ] ]
+  fail_frequency: &fail_frequency
+    type: ArbitraryVariable
+    parameters: [ 0.1, [ 0.001, 0.1, 0.5 ] ]
+  new_node_frequency: &new_node_frequency
+    type: ArbitraryVariable
+    parameters: [ 0.1, [ 0.001, 0.1, 0.5 ] ]
   ##### UNUSED => used only for configuring multiple simulations
   speed: &speed
     type: ArbitraryVariable
@@ -24,12 +30,10 @@ variables:
   explore_area: &explore_area
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
-  fail_frequency: &fail_frequency
-    type: ArbitraryVariable
-    parameters: [ 0.1, [ 0.1 ] ]
-  new_node_frequency: &new_node_frequency
-    type: ArbitraryVariable
-    parameters: [ 0.1, [ 0.1 ] ]
+
+_constants:
+  connection_range: &connection_range 1
+  delta_shift: &delta_shift 0.05
 
 seeds: { scenario: *seed, simulation: *seed }
 
@@ -38,6 +42,19 @@ terminate: { type: AfterTime, parameters: [*simulation_length] }
 network-model:
   type: ConnectWithinDistance
   parameters: [ 1 ]
+
+_remover: &remover
+  - time-distribution: *fail_frequency
+    type: Event
+    actions:
+      - type: RandomRemoveNode
+
+_adder: &adder
+  - time-distribution: *new_node_frequency
+    type: Event
+    actions:
+      - type: RandomAddNode
+        parameters: [ *connection_range, *delta_shift]
 
 _gradient: &program
   - time-distribution: 1
@@ -76,20 +93,28 @@ layers:
     molecule: temperature
 
 deployments:
-  type: Grid
-  parameters: [-5, -5, 5, 5, *density, *density, *grid_delta, *grid_delta]
-  programs: *program
-  contents:
-    - molecule: inClusterThr
-      concentration: *in_cluster_thr
-    - molecule: sameClusterThr
-      concentration: *same_cluster_thr
-    - molecule: waitingTime
-      concentration: *candidate_in_hysteresis
+  - type: Grid
+    parameters: [-5, -5, 5, 5, *density, *density, *grid_delta, *grid_delta]
+    programs: *program
+    contents:
+      - molecule: inClusterThr
+        concentration: *in_cluster_thr
+      - molecule: sameClusterThr
+        concentration: *same_cluster_thr
+      - molecule: waitingTime
+        concentration: *candidate_in_hysteresis
+  - type: Point # God
+    parameters: [-10, -10] # far from the other nodes
+    programs:
+      - *remover
+      - *adder
+    contents:
+      molecule: global # tells that the node has a global view
+      concentration: true
 
 export:
   - type: CSVExporter
-    parameters: ["standardPatternsUpdate", 1.0, "./data"]
+    parameters: ["failScenarioAndUpdatable", 1.0, "./data"]
     data:
       - type: Time
       - type: ClusterCount
