--- a/src/main/yaml/overlayPatterns.yml
+++ b/src/main/yaml/overlayPatterns.yml
@@ -17,12 +17,19 @@ variables:
   candidate_in_hysteresis: &candidate_in_hysteresis
     type: ArbitraryVariable
     parameters: [ 3, [ 3, 5, 7 ] ]
+  ##### UNUSED => used only for configuring multiple simulations
   speed: &speed
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
   explore_area: &explore_area
     type: ArbitraryVariable
     parameters: [ 0.0, [ 0.0 ] ]
+  fail_frequency: &fail_frequency
+    type: ArbitraryVariable
+    parameters: [ 0.1, [ 0.1 ] ]
+  new_node_frequency: &new_node_frequency
+    type: ArbitraryVariable
+    parameters: [ 0.1, [ 0.1 ] ]
 seeds: { scenario: *seed, simulation: *seed }
 
 terminate: { type: AfterTime, parameters: [*simulation_length] }
