--- a/plots/cluster-node-count-failure.yml
+++ b/plots/cluster-node-count-failure.yml
@@ -7,22 +7,18 @@ the_plots_labels:
   - 'cluster-3'
   - 'cluster-4'
   - 'cluster-5'
-  - 'errors'
-  - 'silhouette'
-  - 'dunn index'
 the_plots_formats:
-  - [0,9,10]
+  - [0,3,4,5,6,7]
 #y_labels: ['# of requests', '# of requests','','% of utilization of workers']
 #file_suffixes:
 #  - errors
 line_widths:
-  - [2,2,2,2,2,2,2,2,2,2,2,2,2]
+  - [2,2,2,2,2,2,2,2,2,2,2]
 default_colors: &default_colors ["black", "cyan", "blue","red","green",
-                                 "cyan", "blue","red",
+                                 "cyan", "blue","orange",
                                  "magenta", "brown", "orange", "green", "brown"]
-
 y_labels:
-  - 'index value'
+  - '# of nodes'
 
 the_plots_colors:
   - *default_colors
@@ -30,12 +26,14 @@ legend_position:
   - "upper right"
   - "upper right"
 legend_size: 12
+force_limit_plot_y:
+#  1: 140
+#   3: 1000
+#  4: 35
+#  0: 40
+#  3: 80
 start_plot_x:
   0: 90
-start_plot_y:
-  - -2
-force_limit_plot_y:
-  - 4
 force_limit_plot_x:
 #  0: 820
 #  1: 800
@@ -44,10 +42,9 @@ sampling:
   - true
 samplingField:
   - seed
-
-title_prefix: 'Internal metrics'
+title_prefix: ' '
 excluded_titles:
-  - [4, 5, 6, 7]
+  - [4, 5]
 line_styles:
-  - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
+  - ['solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid', 'solid']
 format: "pdf"
